# dpms

./: AGENTS.md  Cargo.toml
docs/projects/dpms/delivery/: progress-v2.md  progress.md  tasks-v2.json  tasks.json
docs/projects/dpms/spec/: dpms-spec.md  dpms-v2-spec.md
docs/projects/powermon/delivery/: progress.md  tasks.json
docs/projects/powermon/spec/: powermon-spec.md
src/: backend.rs  cli.rs  daemon.rs  display.rs  drm_ops.rs  env.rs  error.rs  main.rs  output.rs  tty.rs  wayland.rs
tests/: integration.rs  test_power_cycle.sh
