[package]
name = "powermon"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", default-features = false, features = ["derive", "std", "help"] }
thiserror = { version = "1", default-features = false }
wayland-client = { version = "0.31", default-features = false }
wayland-protocols-wlr = { version = "0.3", default-features = false, features = ["client"] }
drm = { version = "0.12", default-features = false }
libseat = { version = "0.2", default-features = false }
rustix = { version = "0.38", default-features = false, features = ["fs"] }
nix = { version = "0.29", default-features = false, features = ["signal", "process", "fs", "user"] }
libc = { version = "0.2", default-features = false }
