[package]
name = "dpms"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", default-features = false, features = ["derive", "std", "help"] }
thiserror = { version = "1", default-features = false }

# Wayland backend dependencies
wayland-client = { version = "0.31", default-features = false }
wayland-protocols-wlr = { version = "0.3", default-features = false, features = ["client"] }

# TTY backend dependencies
libseat = { version = "0.2", default-features = false }
drm = { version = "0.14", default-features = false }
nix = { version = "0.29", default-features = false, features = ["signal", "process", "fs", "user"] }
signal-hook = { version = "0.3", default-features = false }
